--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -81,35 +81,29 @@ button:disabled {
 }
 
 .table {
-    background-color: gray;
-    width: 5rem;
+    width: 8rem;
     margin: auto;
-    height: 5rem;
+    height: 8rem;
     position: relative;
-}
-
-.played {
-    display: inline-block;
-    background-color: white;
     font-size: 36px;
 }
 
-.table span:nth-child(0) {
+.table span:nth-of-type(1) {
     position: absolute;
     top: 0;
     left: 2rem;
 }
-.table span:nth-child(1) {
+.table span:nth-of-type(2) {
     position: absolute;
     top: 2rem;
     left: 0;
 }
-.table span:nth-child(2) {
+.table span:nth-of-type(3) {
     position: absolute;
     top: 2rem;
     right: 0;
 }
-.table span:nth-child(3) {
+.table span:nth-of-type(4) {
     position: absolute;
     bottom: 0;
     left: 2rem;
