--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -92,38 +92,41 @@ button:disabled {
 }
 
 .table {
-    width: 8rem;
+    width: 6rem;
     margin: auto;
-    height: 8rem;
+    height: 6rem;
+    margin-top: 1em;
+    margin-bottom: 1em;
     position: relative;
-    font-size: 36px;
+    /* font-size: 36px; */
 }
 
-.table span:nth-of-type(1) {
+/* North */
+.table > span:nth-of-type(1) {
     position: absolute;
     top: 0;
-    left: 2rem;
+    left: 1rem;
     text-align: center;
     width: 4rem;
 }
-.table span:nth-of-type(2) {
+.table > span:nth-of-type(2) {
     position: absolute;
-    top: 2rem;
+    top: 1rem;
     left: 0;
     line-height: 4rem;
     height: 4rem;
 }
-.table span:nth-of-type(3) {
+.table > span:nth-of-type(3) {
     position: absolute;
-    top: 2rem;
+    top: 1rem;
     right: 0;
     line-height: 4rem;
     height: 4rem;
 }
-.table span:nth-of-type(4) {
+.table > span:nth-of-type(4) {
     position: absolute;
     bottom: 0;
-    left: 2rem;
+    left: 1rem;
     text-align: center;
     width: 4rem;
 }
