--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: 24px;
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 #north, #south {
@@ -23,11 +24,13 @@ body {
 
 .hand {
     width: max-content;
+    border-radius: 0.2rem;
+    padding: 0.2rem;
     min-height: 5rem;
 }
 .hand.dummy {
-    background-color: gray;
-    box-shadow: 0px 0px 1em gray, 0px 0px 0.5em black;
+    background-color: lightgray;
+    box-shadow: 0.1em 0.2em 0.5em black;
 }
 
 .spades {
@@ -78,10 +81,10 @@ button:disabled {
 }
 
 .bidhistory {
+    margin: 0.25rem;
     font-size: 14px;
     float: left;
     border: 0.05em solid black;
-    margin-right: 0.1em;
     line-height: 0.5rem;
 }
 
