start enabling robots, but need to fix getting updates during ai play

--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -87,6 +87,11 @@ button:disabled {
     width: 5em;
 }
 
+.robots {
+    float: right;
+    width: 5em;
+}
+
 .bidhistory {
     margin: 0.25rem;
     font-size: 14px;
