fix error in after hand done view

--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -129,7 +129,9 @@ button:disabled {
 label {
     font-size: small;
 }
-
+table {
+    margin: auto;
+}
 .table {
     width: 5rem;
     margin: auto;
