add bidding tooltips to already-made bids

--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -176,3 +176,30 @@ table {
     text-align: center;
     width: 3rem;
 }
+
+.hastooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  }
+  
+  /* Tooltip text */
+  .hastooltip .tooltip {
+    visibility: hidden;
+    width: 120px;
+    background-color: white;
+    color: black;
+    box-shadow: 0.05em 0.1em 0.2em black;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .hastooltip:hover .tooltip {
+    visibility: visible;
+  }
