always use tables

--- a/abridge/src/style.css
+++ b/abridge/src/style.css
@@ -32,6 +32,12 @@ body {
     border-style: solid;
 }
 
+.tabletosit h1 {
+    margin: 0;
+    margin-left: 1em;
+    font-size: 16pt;
+}
+
 .tabletosit .seat {
   display: flex;
   align-items: center;
